feat: refactoring-code-v1

--- a/env.example
+++ b/env.example
@@ -2,48 +2,20 @@
 PORT=8000
 NODE_ENV=development
 
-# Database Configuration
-# PostgreSQL connection string in format: postgresql://user:password@host:port/database
-DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@localhost:5432/postgres
-
-# Redis Configuration (Required for Bull Queue - used for email job processing)
-# Option 1: Use connection string (recommended for cloud providers like Upstash)
-REDIS_URL=rediss://default:YOUR_PASSWORD@YOUR_HOST:6379
-# Option 2: Use individual settings (for local or custom setups)
-# REDIS_HOST=localhost
-# REDIS_PORT=6379
-# REDIS_PASSWORD=
-# REDIS_TLS=false
-
-# SMTP Configuration (Required for sending emails)
-# 
-# Free SMTP Options:
-# 1. Gmail: smtp.gmail.com:587 (500 emails/day) - Requires App Password
-# 2. Outlook: smtp-mail.outlook.com:587 (300 emails/day) - Requires App Password
-# 3. SendGrid: smtp.sendgrid.net:587 (100 emails/day) - Use 'apikey' as username
-# 4. Brevo: smtp-relay.brevo.com:587 (300 emails/day)
-# 5. Mailtrap (Testing): sandbox.smtp.mailtrap.io:2525 (500 test emails/month)
-#
+DATABASE_URL=
+REDIS_URL=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-# Set to 'true' for port 465 (SSL), 'false' for port 587 (TLS)
 SMTP_SECURE=false
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-SMTP_FROM_EMAIL=your-email@gmail.com
+SMTP_USER=surajguava@gmail.com
+SMTP_PASSWORD=
+SMTP_FROM_EMAIL=surajguava@gmail.com
 SMTP_FROM_NAME=Newsletter Service
 
-# Rate Limiting (Email sending rate control)
-# Number of emails to send per second (affects queue processing speed)
 EMAILS_PER_SECOND=10
+CIRCUIT_BREAKER_THRESHOLD=5
+CIRCUIT_BREAKER_TIMEOUT=60000
 
-# Logging Configuration
 LOG_LEVEL=info
 LOG_DIR=./logs
-
-# Optional: CORS Configuration (if needed for specific frontend domains)
-# CORS_ORIGIN=http://localhost:3000,http://localhost:3001
-
-# Optional: Graceful Shutdown Timeout (milliseconds, default: 30000)
-# SHUTDOWN_TIMEOUT=30000
 
