--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ES2022",
     "lib": ["ES2022"],
     "types": ["node"],
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "rootDir": "./src",
     "outDir": "./dist",
     "strict": true,
