--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "db:migrate": "tsx src/utils/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx src/utils/seedMockData.ts",
-    "db:clear": "tsx src/utils/clearAllData.ts"
+    "db:seed": "tsx src/utils/seedMockData.ts"
   },
   "keywords": [
     "newsletter",
@@ -35,7 +34,6 @@
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
     "express": "^4.18.2",
-    "ioredis": "^5.3.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "postgres": "^3.4.7",
